--- a/heheengine/index.html
+++ b/heheengine/index.html
@@ -10,6 +10,6 @@
             <input type="search" id="searchBox" class="input-box input" placeholder="type here" autofocus>
         </form>
     </div>
-    <script src="https://raw.githubusercontent.com/finngreiter/finngreiter.github.io/master/heheengine/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
